# MCP

./: .cursorrules  .dockerignore  CONTEXT_INJECTION_README.md  CURSOR_INTEGRATION_GUIDE.md  CURSOR_INTEGRATION_README.md  CURSOR_SETUP_SUMMARY.md  DOCKER_INTEGRATION.md  Dockerfile  EMBEDDING_SYSTEM_README.md  FRONTEND_COMPARISON.md  FRONTEND_CONTRAST_FIXES.md  FRONTEND_FIXES_SUMMARY.md  IMPORT_CHANGE_SUMMARY.md  INTEGRATION_GUIDE.md  INTEGRATION_STATUS.md  INTERACTION_TAB_IMPROVEMENTS.md  MCP_INTEGRATION_GUIDE.md  MCP_INTEGRATION_STATUS.md  NEW_FRONTEND_README.md  PROMPT_GENERATOR_README.md  PROMPT_OPTIMIZATION_DEMO.md  PROMPT_OPTIMIZATION_README.md  PROMPT_PROCESSOR_README.md  README.md  SEAMLESS_INTEGRATION_README.md  SESSION_PERSISTENCE_README.md  SETUP_README.md  UI_README.md  UI_REFACTOR_SUMMARY.md  UNIFIED_PREFERENCES_README.md  VIEWPORT_HEIGHT_IMPROVEMENTS.md  adaptive_context_learner.py  adaptive_prompt_engine.py  appe_demonstration.py  auto_context_wrapper.py  automatic_context_system.py  config.py  context_learning_system.py  context_manager.py  context_performance_analyzer.py  (+135 more)
.cursor/: mcp.json
backup_before_optimization_20250831_015128/: local_mcp_server_simple.py  main.py
cleanup_backup/20250829_233410/: INTERACTION_TRACKING_CORE_FIX.md  INTERACTION_TRACKING_FIX_SUMMARY.md  context_ui_new.py  fix_interaction_storage.py
data/: agent_tracker.db  agent_tracker_local.db  context_learning.db  context_performance.db  context_refinement.db  success_patterns.json  test_success_patterns.json  threshold_profiles.db
data/dynamic_config/: agent_metadata.json  (+2 more)
(+294 files in other folders)
